@startuml

class AuthenticationController {
    +handleRequest(serviceId, userId)
}

class AuthenticationService {
    +getAvailableServices()
    +processServiceRequest(serviceId, userId)
}

class AuthenticationRepository {
    +saveRequest(userId, serviceId)
    +getRequestHistory(userId)
}

interface ExternalServiceAdapter {
    +callService(serviceId, payload)
    +mapResponseToDomainModel(response)
}

class AuthServiceAdapter  {
}

class TransportServiceAdapter  {
}

AuthenticationController --> AuthenticationService : "calls"
AuthenticationService --> AuthenticationRepository : "uses"
AuthenticationService --> ExternalServiceAdapter : "uses"
ExternalServiceAdapter <|.. AuthServiceAdapter
ExternalServiceAdapter <|.. TransportServiceAdapter

@enduml
